[gd_scene load_steps=4 format=3 uid="uid://b6ixp6q74y83t"]

[ext_resource type="Script" path="res://script/history_idpa.gd" id="1_jrhsq"]
[ext_resource type="PackedScene" uid="uid://bgnvqj8xi6u7e" path="res://scene/volumn.tscn" id="1_volumn"]
[ext_resource type="Theme" uid="uid://cdynjfvdtavlt" path="res://scene/main_menu/main_menu_button_theme.tres" id="2_chhlu"]

[node name="history_idpa" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jrhsq")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.03137255, 0.03137255, 0.03137255, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_chhlu")
theme_override_font_sizes/font_size = 48
text = "IDPA DRILL HIST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HeaderContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NoLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_chhlu")
theme_override_font_sizes/font_size = 32
text = "NO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2

[node name="RawTimeLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_chhlu")
theme_override_font_sizes/font_size = 32
text = "Time"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2

[node name="DownPointsLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_chhlu")
theme_override_font_sizes/font_size = 32
text = "Downpts"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator3" type="VSeparator" parent="MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2

[node name="FastShotLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_chhlu")
theme_override_font_sizes/font_size = 32
text = "Fastest"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator4" type="VSeparator" parent="MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2

[node name="TotalScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_chhlu")
theme_override_font_sizes/font_size = 32
text = "Scoreâ†‘"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ListContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Back"

[node name="VolumeControl" parent="." instance=ExtResource("1_volumn")]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -420.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
